[tool.poetry]
name = "oncotreenx"
version = "0.2.0"
description = "Python package to navigate Oncotree using networkx directed graph logic"
authors = ["Lindsay, James <jlindsay@ds.dfci.harvard.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^3.2.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
